src/components/EthSpentTable/EthSpentTable.module.scss
@import '~@santiment-network/ui/mixins';

.header {
  display: flex;
  align-items: center;
}

.headerLoader {
  font-size: 12px;
  margin-left: 24px;
}

.actions {
  display: flex;
  margin-left: auto;
}

.control {
  margin-right: 10px;
}

.panel {
  padding: 0;
  min-height: 250px;
}

.wrapper {
  width: 100%;
  min-height: 300px;
}

.ticker {
  color: var(--waterloo);
  margin-left: 6px;
}

.name {
  color: var(--mirage);

  & span {
    @include text('body-3');
  }

  &:hover {
    color: var(--jungle-green);

    & .ticker {
      color: var(--jungle-green);
    }
  }
}

.ethSpentTable:global(.ReactTable) {
  border: none;
  min-height: 250px;

  :global {
    .rt-td {
      border: none !important;
      padding: 0;
      align-self: baseline;
      text-overflow: clip;
      display: flex;
      align-items: center;

      @include text('body-3');

      & > div {
        @include text('body-3');
      }

      &:last-child {
        flex-direction: column;
        align-items: baseline;
      }
    }

    .rt-tr-group {
      max-height: none;
    }

    .rt-tr {
      padding: 8px 0;
    }

    .rt-th {
      text-align: left;
      padding: 7px 0;
      position: relative;
      width: 100%;
      overflow: visible;
      border: none;
      outline: none;

      &:nth-child(6) {
        padding-left: 11px;
      }

      @include text('caption');

      & > div {
        position: relative;
        padding: 0 10px 0 0;
        width: fit-content;
      }

      &.-sort-desc,
      &.-sort-asc {
        color: var(--mirage);
        box-shadow: none !important;

        & > div {
          &::before,
          &::after {
            content: '';
            position: absolute;
            right: 0;
            border: 4px solid transparent;
            border-radius: 3px;
          }

          &::before {
            border-top: 4px solid var(--mystic);
            bottom: 0;
          }

          &::after {
            border-bottom: 4px solid var(--mystic);
            top: 0;
          }
        }
      }

      &.-sort-asc > div::after {
        border-bottom-color: var(--waterloo);
      }

      &.-sort-desc > div::before {
        border-top-color: var(--waterloo);
      }
    }

    .rt-tbody .rt-tr-group,
    .rt-thead.-header {
      padding: 0 23px;
    }

    .rt-tbody .rt-tr-group {
      padding-right: 0;
    }
  }
}

.loader {
  z-index: 10;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  align-items: center;
  justify-content: center;
  background: var(--white);
  opacity: 0.8;
}

